Dejando un espacio inferior por si se quiere overridear la actividad de controles de cast y meter publi

--- a/multidisplaycast/src/main/res/layout/activity_cast_controls.xml
+++ b/multidisplaycast/src/main/res/layout/activity_cast_controls.xml
@@ -154,7 +154,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="65dp"
         android:background="#24241f">
 
         <RelativeLayout
@@ -204,6 +204,13 @@
 
 
     </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/masterAdsLayer"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true" tools:background="@color/castPrimaryColor"/>
 
 
     <RelativeLayout
