- Añadida la posibilidad de Fast Forward y rewind si el dispositivo lo soporta (probado con roku) - Eliminando el "descubrimiento" de chromecast del SSDPDiscoveryProvider para que sea CastService el que lo descubra - Los botones de CastControl activity tienen un feedback declarado en color/castLightPrimaryColor - Añadida toolbar con back button en la pantalla de controles de cast

--- a/multidisplaycast/src/main/res/drawable/shape_buttons.xml
+++ b/multidisplaycast/src/main/res/drawable/shape_buttons.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="@color/castPrimaryColor"/>
-        </shape>
-    </item>
-</layer-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/shape_buttons_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/shape_buttons_pressed" android:state_focused="true"/>
+    <item android:drawable="@drawable/shape_buttons_normal"/>
+</selector>
