--- a/multidisplaycast/src/main/res/layout/activity_cast_controls.xml
+++ b/multidisplaycast/src/main/res/layout/activity_cast_controls.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="#24241f">
 
     <RelativeLayout
@@ -164,6 +164,36 @@
             android:padding="12dp">
 
             <ImageView
+                android:id="@+id/prev"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="18dp"
+                android:layout_toLeftOf="@+id/stop"
+                android:layout_toStartOf="@+id/stop"
+                android:background="@drawable/shape_buttons"
+                android:clickable="true"
+                android:padding="4dp"
+                android:src="@drawable/ic_fast_rewind_white_24dp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <ImageView
+                android:id="@+id/next"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="18dp"
+                android:layout_toEndOf="@+id/volume"
+                android:layout_toRightOf="@+id/volume"
+                android:background="@drawable/shape_buttons"
+                android:clickable="true"
+                android:padding="4dp"
+                android:src="@drawable/ic_fast_forward_white_24dp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <ImageView
                 android:id="@+id/stop"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -263,5 +293,15 @@
             android:indeterminateTint="@color/castPrimaryColor"/>
 
     </RelativeLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#8b000000"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/MultiCast.Toolbar.Transparent"/>
 
 </RelativeLayout>
