--- a/multidisplaycast/src/main/res/values/colors.xml
+++ b/multidisplaycast/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="castPrimaryColor">#3F51B5</color>
+    <color name="castLightPrimaryColor">#5C6BC0</color>
     <color name="castDisabledColor">#555</color>
 </resources>
